--- a/durcheinander/css/style.css
+++ b/durcheinander/css/style.css
@@ -20,7 +20,7 @@ body {
   display: grid;
   grid-template-columns: repeat(var(--col-num), 1fr);
   grid-template-rows: repeat(var(--row-num), 1fr);
-  gap: 2px;
+  gap: 3px;
   margin: 0;
   padding: 0;
   border: 1px solid black;
@@ -35,12 +35,15 @@ body {
   background-color: rgb(150, 150, 150);
   /* padding: 10px; */
   border: 1px solid #fff;
+  -webkit-box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.75);
 }
 
 .pressed {
-  -webkit-box-shadow: inset 1px 1px 10px #333;
-  -moz-box-shadow: inset 1px 1px 10px #333;
-  box-shadow: inset 1px 1px 10px #333;
+  -webkit-box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
 }
 
 #user {
