--- a/durcheinander/css/style.css
+++ b/durcheinander/css/style.css
@@ -44,6 +44,7 @@ body {
   -webkit-box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
+  transform: translate(2px, 2px);
 }
 
 #user {
