--- a/durcheinander/css/style.css
+++ b/durcheinander/css/style.css
@@ -1,9 +1,9 @@
 :root {
-  --col-num: 20;
-  --row-num: 15;
+  --col-num: 25;
+  --row-num: 20;
 
-  --user-width: 300px;
-  --user-height: 500px;
+  --user-width: 150px;
+  --user-height: 300px;
 }
 body {
   display: flex;
@@ -28,19 +28,22 @@ body {
 }
 
 .grid-item {
+  z-index: 2;
   inset: 150px;
   display: inline;
   /* width: 100%;
   height: 100%; */
+  outline: black 0.5px;
   background-color: rgb(150, 150, 150);
   /* padding: 10px; */
   border: 1px solid #fff;
   -webkit-box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.75);
-  box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 6px 6px 4px 1px rgba(0, 0, 0, 0.75);
 }
 
 .pressed {
+  z-index: 1;
   -webkit-box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
@@ -50,18 +53,16 @@ body {
 #user {
   z-index: 5000;
   position: fixed;
-  bottom: 0;
-  left: 0;
   width: var(--user-width);
   height: var(--user-height);
 }
 
 .cls-1 {
   /* cursor: none; */
-  fill: transparent;
-  stroke-width: 1px;
+  /* fill: transparent; */
+  /* stroke-width: 1px; */
 }
-
+/* 
 .grid-item:hover {
   background-color: red;
-}
+} */
